--- a/front-end/my-app/src/stories/BsPlayerCard/BsPlayerCard.css
+++ b/front-end/my-app/src/stories/BsPlayerCard/BsPlayerCard.css
@@ -28,3 +28,10 @@
     text-align: center;
 }
 
+@media screen and (max-width: 750px) {
+    
+    .bs-card-grid-container {
+        display: grid;
+        grid-template-columns: auto;
+    }
+}
